--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
 .input-glow {
-  @apply focus:outline-cyan-500 focus:ring-2 focus:ring-cyan-200 focus:outline-none focus:border-2
+  @apply focus:outline-blue-200 focus:ring-2 focus:ring-blue-200 focus:outline-none focus:border-2
 }
 
